# Alexandria

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  download_model.py
chat/: Makefile  README.md  env.test.example  pyproject.toml  pytest_unit.ini
chat/src/: config.py
chat/src/app/: handlers.py  utils.py
chat/src/app/http/: books.py  greet.py  rooms.py
chat/src/app/wss/: chat.py
chat/src/domain/: consts.py  prompts.py
chat/src/infra/huggingface/: loader.py
chat/src/infra/langchain/: agent.py  embeddings.py  loader.py  memory.py  tools.py  vectorstore.py
chat/src/infra/redis/: connection.py
chat/tests/locust/: Dockerfile  locustfile.py
chat/tests/unit/: conftest.py
chat/tests/unit/test_api/: test_errors.py
nginx/: app.conf  nginx.conf
services/categorizer/: Dockerfile  Makefile
services/chat/: Dockerfile  Makefile  env.example  pyproject.toml
services/chat/src/: config.py  main.py
services/chat/src/app/: exceptions.py  handlers.py
services/chat/src/app/http/: rooms.py
services/chat/src/app/wss/: chat.py
services/chat/src/domain/: models.py  prompts.py
services/chat/src/infra/: redis.py
services/chat/src/infra/langchain/: agent.py  callbacks.py  embeddings.py  loader.py  memory.py  tools.py  vectorstore.py
services/chat/src/infra/redis/: connection.py  models.py
services/chat/src/services/: book_service.py  room_service.py
services/chat/src/templates/: chat.html
services/chat/tests/: conftest.py
services/chat/tests/test_api/: test_errors.py  test_wront_path.py
services/chat/tests/test_db/: test_redis_models.py
services/chat/tests/test_infra/: test_loader.py
services/summarizer/: Dockerfile  Makefile
